renamed DO_SPACES to COS, added ModelMapper (#16)